# collaborative-server

./: README.md  pyproject.toml  requirements.txt
src/: __main__.py
src/ids/: __init__.py  global_text.py  server_handle.py  server_setting.py
src/tui/: __init__.py  __main__.py  base_screen.py  page.py  runTUI.py
src/tui/i18n/: __init__.py  i18n.py
src/tui/ui/manage/: manage.py  style.py
src/tui/ui/port/: port.py  style.py
src/ws/: __init__.py  __main__.py  handle.py  websocket.py
