[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "collaborative-server"
version = "0.0.1"
description = "AstraEditor collaborative editing local server"
readme = "README.md"
requires-python = ">=3.14.4"
license = "GPL-3.0-or-later"
authors = [
    {name = "KOSHINO", email = "aomeone8747@foxmail.com"}
]

dependencies = [
    "websockets>=16.0",
    "textual>=8.2.5",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.8.0",
]

[project.scripts]
collab-server = "src.__main__:main"